--- a/site1/index.html
+++ b/site1/index.html
@@ -82,11 +82,11 @@
           <div class="slider">
             <div class="slider__img">
               <div class="desc">
-                <span>dfshsd</span>
-                <h3>vfdsgdfdfshfds</h3>
+                <span>portfolio</span>
+                <h3>WEB GALLERY</h3>
                 <p>
-                  fdhfdshsdfhsdghsdgjhsgjsf<br />
-                  gdshsdghsdgj
+                  작가들의 포트폴리오 공간입니다.<br />
+                  다양한 작품과 작품 이야기가 있습니다.
                 </p>
                 <div class="btn">
                   <a href="#">자세히 보기</a>
@@ -350,55 +350,53 @@
       <h2 class="blind">푸터</h2>
       <div class="footer__inner container">
         <div class="footer__menu">
-          <h3>사이트</h3>
-          <ul>
-            <li><a href="/">웹표준 사이트</a></li>
-            <li><a href="/">반응형 사이트</a></li>
-            <li><a href="/">패럴랙스 사이트</a></li>
-            <li><a href="/">포트폴리오 사이트</a></li>
-          </ul>
           <div>
+            <h3>포트폴리오</h3>
+            <ul>
+              <li><a href="/">포트폴리오 사이트</a></li>
+              <li><a href="/">포트폴리오 사이트</a></li>
+              <li><a href="/">포트폴리오 사이트</a></li>
+              <li><a href="/">포트폴리오 사이트</a></li>
+            </ul>
+          </div>
             <div>
-              <h3>헤더영역</h3>
+              <h3>아트매거진</h3>
               <ul>
-                <li><a href="/">메뉴유형01</a></li>
-                <li><a href="/">메뉴유형02</a></li>
-                2
+                <li><a href="/">아트매거진</a></li>
+                <li><a href="/">아트매거진</a></li>
               </ul>
             </div>
             <div>
-              <h3>슬라이드영역</h3>
+              <h3>아티스트</h3>
               <ul>
-                <li><a href="/">슬라이드 유형01</a></li>
-                <li><a href="/">슬라이드 유형02</a></li>
-                2
+                <li><a href="/">국내 아티스트</a></li>
+                <li><a href="/">국외 아티스트</a></li>
               </ul>
             </div>
             <div>
-              <h3>이미지영역</h3>
+              <h3>작품이야기</h3>
               <ul>
-                <li><a href="/">이미지유형01</a></li>
-                <li><a href="/">>이미지유형02</a></li>
-                <li><a href="/">이미지텍스트유형01</a></li>
-                <li><a href="/">이미지텍스트유형02</a></li>
-                <li><a href="/">텍스트유형01</a></li>
+                <li><a href="/">작품이야기</a></li>
+                <li><a href="/">작품이야기</a></li>
+                <li><a href="/">작품이야기</a></li>
+                <li><a href="/">작품이야기</a></li>
+                <li><a href="/">작품이야기</a></li>
               </ul>
             </div>
             <div>
-              <h3>컨텐츠영역</h3>
+              <h3>미술관나들이</h3>
               <ul>
-                <li><a href="/">카드유형01</a></li>
-                <li><a href="/">카드유형02</a></li>
-                <li><a href="/">카드유형03</a></li>
-                3 3
+                <li><a href="/">미술관나들이</a></li>
+                <li><a href="/">미술관나들이</a></li>
+                <li><a href="/">미술관나들이</a></li>
               </ul>
             </div>
             <div>
-              <h3>푸터영역</h3>
+              <h3>오시는길</h3>
               <ul>
-                <li><a href="/">푸터메뉴유형01</a></li>
-                <li><a href="/">푸터컨택트유형02</a></li>
-                <li><a href="/">푸터이메일유형03</a></li>
+                <li><a href="/">오시는길</a></li>
+                <li><a href="/">오시는길</a></li>
+                <li><a href="/">오시는길</a></li>
               </ul>
             </div>
           </div>
@@ -415,8 +413,8 @@
       var Swiper = new Swiper(".my");
 
 
-      const btnStop = document.querySelector(.);
-      const btnStart = document.querySelector(.);
+      const btnStop = document.querySelector();
+      const btnStart = document.querySelector();
       const btnHam = document.querySelector();
       const btnMenu = document.querySelector();
       const btnMenuList = document.querySelector();
