--- a/javascript/javascript09.html
+++ b/javascript/javascript09.html
@@ -59,14 +59,12 @@
       <ul>
         <li>
           <a href="#"
-            >01. 브라우저 속성 : window.innerWidth : 브라우저의 가로값(스크롤바
-            미포함)</a
+            >01. 브라우저 속성 : window.innerWidth : 브라우저의 가로값)</a
           >
         </li>
         <li>
           <a href="#"
-            >02. 브라우저 속성 : window.innerHeight : 브라우저의 높이값(스크롤바
-            미포함)</a
+            >02. 브라우저 속성 : window.innerHeight : 브라우저의 높이값</a
           >
         </li>
         <li>
@@ -79,6 +77,14 @@
           <a href="#"
             >04. 브라우저 속성 : window.outerHeight : 브라우저의 높이값(스크롤바
             포함)</a
+          >
+        </li>
+        <li>
+          <a href="#">03. 브라우저 속성 : window.screen.width: 화면의 가로값</a>
+        </li>
+        <li>
+          <a href="#"
+            >04. 브라우저 속성 : window.screen.height : 화면의 높이값</a
           >
         </li>
         <br />
