--- a/site/cardType/sdfjs;ldkfg.html
+++ b/site/cardType/sdfjs;ldkfg.html
@@ -7,10 +7,10 @@
     <title>카드 유형01</title>
     <style>
       /* fonts */
-      @import url("https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css");
+      @import url("https://webfontworld.github.io/gmarket/GmarketSans.css");
 
-      .nexon {
-        font-family: "NexonLv1Gothic";
+      .gmarket {
+        font-family: "GmarketSans";
         font-weight: 400;
       }
 
@@ -22,7 +22,7 @@
 
       a {
         text-decoration: none;
-        color: #000;
+        color: #67778a;
       }
 
       img {
@@ -60,9 +60,10 @@
       .section > p {
         font-size: 22px;
         font-weight: 300;
-        color: #666;
+        color: #67778a;
         text-align: center;
         margin-bottom: 70px;
+        line-height: 1.8;
       }
 
       /* cartType */
@@ -89,35 +90,35 @@
       }
 
       .card__body .desc {
-        font-size: 18px;
+        font-size: 17px;
         line-height: 1.4;
         color: #666;
         margin-bottom: 20px;
         font-weight: 300;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 4;
-        -webkit-box-orient: vertical;
       }
     </style>
   </head>
 
   <body>
-    <section id="cardType01" class="card__wrap nexon section">
-      <h2>프론트앤드 강의 💻</h2>
-      <p>웹 디자이너, 웹 퍼블리셔, 프론트앤드를 위한 강의 리스트 입니다.</p>
+    <section id="cardType01" class="card__wrap gmarket section">
+      <h2>웹스토리보이 강의</h2>
+      <p>
+        웹 디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 강의 사이트입니다.<br />
+        Gmarket Sans Light 22px 150% #67778A
+      </p>
       <div class="card__inner container">
         <article class="card">
           <figure class="card__header">
-            <img src="img/card_bg01_01.jpg" alt="웹표준 사이트 만들기" />
+            <img src="img/card01.jpg" alt="웹표준 사이트 만들기" />
           </figure>
           <div class="card__body">
             <h3 class="tit">웹표준 사이트 만들기</h3>
             <p class="desc">
-              사이트를 만들기 위한 기초 강의입니다. 기본 코딩에 대한 감각을
-              익히고, 웹 표준을 준수하면서 코딩하는 방법을 익힙니다. 다양한
-              예제를 통해 사이트를 만드는 기본입니다.
+              사이트를 만들기 위한 기초 강의입니다. 기<br />
+              본 코딩에 대한 감각을 익히고, 웹 표준을 <br />
+              준수하면서 코딩하는 방법을 익힙니다. 다<br />
+              양한 예제를 통해 사이트를 만드는 기본 강<br />
+              의입니다.
             </p>
             <a class="btn" href="/">
               더 자세히 보기
@@ -140,14 +141,16 @@
         </article>
         <article class="card">
           <figure class="card__header">
-            <img src="img/card_bg01_02.jpg" alt="웹표준 사이트 만들기" />
+            <img src="img/card02.jpg" alt="웹표준 사이트 만들기" />
           </figure>
           <div class="card__body">
-            <h3 class="tit">웹표준 사이트 만들기</h3>
+            <h3 class="tit">반응형 사이트 만들기</h3>
             <p class="desc">
-              사이트를 만들기 위한 기초 강의입니다. 기본 코딩에 대한 감각을
-              익히고, 웹 표준을 준수하면서 코딩하는 방법을 익힙니다. 다양한
-              예제를 통해 사이트를 만드는 기본입니다.
+              웹표준 사이트를 완성하고, 반응형을 익히<br />
+              는 사이트입니다. 기본 코딩을 익히고, 반응<br />
+              형 감각을 키우면 모바일 및 반응형 사이트<br />
+              도 만들 수 있습니다. 웹표준 사이트를 완성<br />
+              하였다면 이제 반응형 사이트를 도전하세요.
             </p>
             <a class="btn" href="/">
               더 자세히 보기
@@ -170,14 +173,14 @@
         </article>
         <article class="card">
           <figure class="card__header">
-            <img src="img/card_bg01_03.jpg" alt="웹표준 사이트 만들기" />
+            <img src="img/card03.jpg" alt="웹표준 사이트 만들기" />
           </figure>
           <div class="card__body">
-            <h3 class="tit">웹표준 사이트 만들기</h3>
+            <h3 class="tit">패럴렉스 사이트 만들기</h3>
             <p class="desc">
-              사이트를 만들기 위한 기초 강의입니다. 기본 코딩에 대한 감각을
-              익히고, 웹 표준을 준수하면서 코딩하는 방법을 익힙니다. 다양한
-              예제를 통해 사이트를 만드는 기본입니다.
+              기업 사이트 중 50% 이상이 패럴렉스 스크롤링 효과로 만들어져
+              있습니다.웹 표준, 반응형 사이트를 완성하였다면, 이제는 인터<br />
+              렉티브한 패럴렉스 스크롤링 사이트를 완성 할 차례입니다.
             </p>
             <a class="btn" href="/">
               더 자세히 보기
