--- a/site1/index.html
+++ b/site1/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="assets/css/footer.css" />
 
     <!-- css -->
-    <link rel="stylesheet" href="assets/css/swiper.min.css" />
+    <link rel="stylesheet" href="assets/css/swiper.css" />
 
     <style></style>
   </head>
@@ -409,7 +409,7 @@
     </footer>
     <!-- //footerType -->
     <script src="assets/js/swiper.min.js"></script>
-    <!-- <script>
+    <script>
          var swiper = new Swiper(".mySwiper", {
         navigation: {
           nextEl: ".swiper-button-next",
@@ -466,7 +466,7 @@
           btnHam.classList.remove("active");
         }
       });
-    </script> -->
+    </script>
     <script> 
       const btnStop = document.querySelector(".swiper-button-stop");
       const btnStart = document.querySelector(".swiper-button-play");
