--- a/webd/index1.html
+++ b/webd/index1.html
@@ -202,7 +202,7 @@
         // $(this).find(".submenu").stop().hide();
       });
     </script>
-    <!-- 
+
     <script>
       var slideCount = $(".slideImg").length;
       var currentIndex = 0;
@@ -216,7 +216,7 @@
         slidePosition = currentIndex * -1000 + "px";
         $(".slideList").animate({ left: slidePosition }, 400);
       }, 3000);
-    </script> -->
+    </script>
 
     <script>
       var tabMenu = $(".notice");
